--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,12 +1,16 @@
 {
   "store.home": {
     "blocks": [
+      "shelf",
       "rich-text",
       "info-card#button-right",
       "info-card#button-left",
       "flex-layout.row"
     ]
   },
+
+
+
   "rich-text": {
     "props": {
       "text": "**Hello, World!**",
