--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,16 +1,13 @@
 {
   "store.home": {
     "blocks": [
-      "shelf",
+      "slider-layout#home",
       "rich-text",
       "info-card#button-right",
       "info-card#button-left",
       "flex-layout.row"
     ]
   },
-
-
-
   "rich-text": {
     "props": {
       "text": "**Hello, World!**",
