--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -87,7 +87,7 @@
   
   "rich-text#desktop": {
     "props": {
-      "text": "### Your Coffee, Your Way \n ### New Coffee Makers Collection",
+      "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection",
       "textPosition": "CENTER",
       "textAlignment": "CENTER"
     }
@@ -95,7 +95,7 @@
   
   "rich-text#mobile": {
     "props": {
-      "text": "#### Your Coffee, Your Way \n ### New Coffee Makers Collection",
+      "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection",
       "textPosition": "CENTER",
       "textAlignment": "CENTER"
     }
