--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -6,15 +6,19 @@
      "blocks": [
         "search-result-layout.desktop",
         "search-result-layout.mobile",
-        "search-not-found-layout",
-        "breadcrumb.search",
-        "search-title.v2",
-        "total-products.v2",
-        "order-by.v2",
-        "search-fetch-previous",
-        "search-content",
-        "filter-navigator.v3",
-        "search-fetch-more"
+        "search-not-found-layout"
      ]
+  },
+  "search-result-layout.desktop":{
+    "children": [
+      "breadcrumb.search",
+      "search-title.v2",
+      "total-products.v2",
+      "order-by.v2",
+      "search-fetch-previous",
+      "search-content",
+      "filter-navigator.v3",
+      "search-fetch-more"
+    ]
   }
 }
