--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -1,11 +1,11 @@
 {
     "store.custom#landing":{
         "blocks":[
-            "image#landingbanner", 
+            "image", 
             "search-result-layout.customQuery"
         ]
     },
-    "image#landingbanner":{
+    "image":{
         "props":{
             "src": "https://s2.glbimg.com/F6etwOKhJL_a1wfMARoyx62tjO8=/0x92:1280x960/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2020/y/J/GiUs13Qw6rGU2197kSUA/whatsapp-image-2020-07-31-at-16.55.46.jpeg",
             "minWidtg": "100%"
