--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -16,7 +16,8 @@
             "querySchema": {
                 "orderByField": "DESC",
                 "hideUnavailableItems": true,
-                "maxItemsPerPage": 8
+                "maxItemsPerPage": 8,
+                "query": "Blue Top Retro Camera"
             }
         }
     }
