--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -17,7 +17,7 @@
                 "orderByField": "DESC",
                 "hideUnavailableItems": true,
                 "maxItemsPerPage": 8,
-                "query": "Blue Top Retro Camera"
+                "queryField": "Blue Top Retro Camera"
             }
         }
     }
