--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -16,8 +16,8 @@
             "querySchema": {
                 "orderByField": "OrderByReleaseDateDESC",
                 "hideUnavailableItems": true,
-                "maxItemsPerPage": 8
-                // "queryField": "Blue Top Retro Camera"
+                "maxItemsPerPage": 8,
+                "queryField": "Blue Top Retro Camera"
             }
         }
     }
